EX-72 Create Exam Object Automatically
* EX-72 Create Exam Object Automatically
